@@ -10,6 +10,9 @@ Version 1.18-5 (opened May 21, 2010)
 	m <- cca(dune ~ A1 + Condition(Management), dune.env)
 	plot(m) ## failed
 
+	* ordiarrows: gained 'label' argument which uses ordilabel() on
+	arrow starts.
+
 	* ordispider: gained 'label' argument (uses ordilabel()). Can now
 	handle ordihull() result objects: connects points in the line to
 	the hull centroid. Extended examples.
